Form alignment fixed

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,10 +9,10 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 
-header{
+body{
     width: 100%;
     height: 70vh;
-    background: linear-gradient(180deg, #C2E2FF 0%, rgba(229, 239, 255, 0.262661) 83.7%, rgba(229, 239, 255, 0) 100%);
+    background: linear-gradient(180deg, #C2E2FF 0%, rgba(229, 239, 255, 0.262661) 83.7%, rgba(229, 239, 255, 0) 100%) no-repeat;
     padding: 6rem;
 
 }
@@ -65,6 +65,7 @@ iframe{
 .hero-form form input,
 .hero-form form textarea
 {
+    width: 100%;
     border: none;
     padding: 8px 20px ;
     margin: 10px;
@@ -74,13 +75,15 @@ iframe{
 }
 
 
-.hero-form form input::placeholder{
+.hero-form form input::placeholder,
+.hero-form form textarea::placeholder
+{
     font-size: 0.8rem;
 }
 
 form .btn{
 position: relative;
-left: 230px;
+left: 420px;
 
 }
 .img{
